--- a/src/features/TodoList/TodoList.module.css
+++ b/src/features/TodoList/TodoList.module.css
@@ -1,5 +1,11 @@
 .listItem {
-    padding-bottom: 0;
+    padding-bottom: 0.5rem;
     list-style: none;
 
+}
+
+.todoList {
+    padding: 0;
+    margin: 0;
+    list-style:none
 }
